--- a/main.ipynb
+++ b/main.ipynb
@@ -22,241 +22,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>DIA_TRANSPORTE</th>\n",
-       "      <th>NOMBRE_EMPRESA</th>\n",
-       "      <th>LINEA</th>\n",
-       "      <th>AMBA</th>\n",
-       "      <th>TIPO_TRANSPORTE</th>\n",
-       "      <th>JURISDICCION</th>\n",
-       "      <th>PROVINCIA</th>\n",
-       "      <th>MUNICIPIO</th>\n",
-       "      <th>CANTIDAD</th>\n",
-       "      <th>DATO_PRELIMINAR</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2023-01-01</td>\n",
-       "      <td>MUNICIPALIDAD DE MERCEDES PROVINCIA DE BUENOS ...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>SI</td>\n",
-       "      <td>COLECTIVO</td>\n",
-       "      <td>MUNICIPAL</td>\n",
-       "      <td>BUENOS AIRES</td>\n",
-       "      <td>MERCEDES</td>\n",
-       "      <td>61</td>\n",
-       "      <td>NO</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2023-01-01</td>\n",
-       "      <td>MUNICIPALIDAD DE MERCEDES PROVINCIA DE BUENOS ...</td>\n",
-       "      <td>2B</td>\n",
-       "      <td>SI</td>\n",
-       "      <td>COLECTIVO</td>\n",
-       "      <td>MUNICIPAL</td>\n",
-       "      <td>BUENOS AIRES</td>\n",
-       "      <td>MERCEDES</td>\n",
-       "      <td>11</td>\n",
-       "      <td>NO</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2023-01-01</td>\n",
-       "      <td>EMPRESA BATAN S.A.</td>\n",
-       "      <td>BS_AS_LINEA 715M</td>\n",
-       "      <td>NO</td>\n",
-       "      <td>COLECTIVO</td>\n",
-       "      <td>MUNICIPAL</td>\n",
-       "      <td>BUENOS AIRES</td>\n",
-       "      <td>GENERAL PUEYRREDON</td>\n",
-       "      <td>1707</td>\n",
-       "      <td>NO</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2023-01-01</td>\n",
-       "      <td>COMPAÑIA  DE TRANSPORTE VECINAL S.A.</td>\n",
-       "      <td>BS_AS_LINEA_326</td>\n",
-       "      <td>SI</td>\n",
-       "      <td>COLECTIVO</td>\n",
-       "      <td>PROVINCIAL</td>\n",
-       "      <td>BUENOS AIRES</td>\n",
-       "      <td>SN</td>\n",
-       "      <td>438</td>\n",
-       "      <td>NO</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2023-01-01</td>\n",
-       "      <td>EMPRESA DE TRANSPORTE PERALTA RAMOS SACI</td>\n",
-       "      <td>BS_AS_LINEA_512</td>\n",
-       "      <td>NO</td>\n",
-       "      <td>COLECTIVO</td>\n",
-       "      <td>MUNICIPAL</td>\n",
-       "      <td>BUENOS AIRES</td>\n",
-       "      <td>GENERAL PUEYRREDON</td>\n",
-       "      <td>1189</td>\n",
-       "      <td>NO</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>472286</th>\n",
-       "      <td>2023-12-31</td>\n",
-       "      <td>S.A TRANSPORTE CIUDAD DE RIO CUARTO</td>\n",
-       "      <td>TRONCAL  A</td>\n",
-       "      <td>NO</td>\n",
-       "      <td>COLECTIVO</td>\n",
-       "      <td>MUNICIPAL</td>\n",
-       "      <td>CORDOBA</td>\n",
-       "      <td>RIO CUARTO</td>\n",
-       "      <td>28</td>\n",
-       "      <td>NO</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>472287</th>\n",
-       "      <td>2023-12-31</td>\n",
-       "      <td>S.A TRANSPORTE CIUDAD DE RIO CUARTO</td>\n",
-       "      <td>TRONCAL B</td>\n",
-       "      <td>NO</td>\n",
-       "      <td>COLECTIVO</td>\n",
-       "      <td>MUNICIPAL</td>\n",
-       "      <td>CORDOBA</td>\n",
-       "      <td>RIO CUARTO</td>\n",
-       "      <td>38</td>\n",
-       "      <td>NO</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>472288</th>\n",
-       "      <td>2023-12-31</td>\n",
-       "      <td>S.A TRANSPORTE CIUDAD DE RIO CUARTO</td>\n",
-       "      <td>TRONCAL C</td>\n",
-       "      <td>NO</td>\n",
-       "      <td>COLECTIVO</td>\n",
-       "      <td>MUNICIPAL</td>\n",
-       "      <td>CORDOBA</td>\n",
-       "      <td>RIO CUARTO</td>\n",
-       "      <td>54</td>\n",
-       "      <td>NO</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>472289</th>\n",
-       "      <td>2023-12-31</td>\n",
-       "      <td>S.A TRANSPORTE CIUDAD DE RIO CUARTO</td>\n",
-       "      <td>TRONCAL D</td>\n",
-       "      <td>NO</td>\n",
-       "      <td>COLECTIVO</td>\n",
-       "      <td>MUNICIPAL</td>\n",
-       "      <td>CORDOBA</td>\n",
-       "      <td>RIO CUARTO</td>\n",
-       "      <td>52</td>\n",
-       "      <td>NO</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>472290</th>\n",
-       "      <td>2023-12-31</td>\n",
-       "      <td>COOP.DE PROV.DE O.Y S.P.Y C.LAS TONINAS</td>\n",
-       "      <td>URBANA DE TRANSPORTE</td>\n",
-       "      <td>NO</td>\n",
-       "      <td>COLECTIVO</td>\n",
-       "      <td>MUNICIPAL</td>\n",
-       "      <td>BUENOS AIRES</td>\n",
-       "      <td>URBANO DE LA COSTA</td>\n",
-       "      <td>1408</td>\n",
-       "      <td>NO</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>472291 rows × 10 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       DIA_TRANSPORTE                                     NOMBRE_EMPRESA  \\\n",
-       "0          2023-01-01  MUNICIPALIDAD DE MERCEDES PROVINCIA DE BUENOS ...   \n",
-       "1          2023-01-01  MUNICIPALIDAD DE MERCEDES PROVINCIA DE BUENOS ...   \n",
-       "2          2023-01-01                                 EMPRESA BATAN S.A.   \n",
-       "3          2023-01-01               COMPAÑIA  DE TRANSPORTE VECINAL S.A.   \n",
-       "4          2023-01-01           EMPRESA DE TRANSPORTE PERALTA RAMOS SACI   \n",
-       "...               ...                                                ...   \n",
-       "472286     2023-12-31                S.A TRANSPORTE CIUDAD DE RIO CUARTO   \n",
-       "472287     2023-12-31                S.A TRANSPORTE CIUDAD DE RIO CUARTO   \n",
-       "472288     2023-12-31                S.A TRANSPORTE CIUDAD DE RIO CUARTO   \n",
-       "472289     2023-12-31                S.A TRANSPORTE CIUDAD DE RIO CUARTO   \n",
-       "472290     2023-12-31            COOP.DE PROV.DE O.Y S.P.Y C.LAS TONINAS   \n",
-       "\n",
-       "                       LINEA AMBA TIPO_TRANSPORTE JURISDICCION     PROVINCIA  \\\n",
-       "0                          1   SI       COLECTIVO    MUNICIPAL  BUENOS AIRES   \n",
-       "1                         2B   SI       COLECTIVO    MUNICIPAL  BUENOS AIRES   \n",
-       "2           BS_AS_LINEA 715M   NO       COLECTIVO    MUNICIPAL  BUENOS AIRES   \n",
-       "3            BS_AS_LINEA_326   SI       COLECTIVO   PROVINCIAL  BUENOS AIRES   \n",
-       "4            BS_AS_LINEA_512   NO       COLECTIVO    MUNICIPAL  BUENOS AIRES   \n",
-       "...                      ...  ...             ...          ...           ...   \n",
-       "472286            TRONCAL  A   NO       COLECTIVO    MUNICIPAL       CORDOBA   \n",
-       "472287             TRONCAL B   NO       COLECTIVO    MUNICIPAL       CORDOBA   \n",
-       "472288             TRONCAL C   NO       COLECTIVO    MUNICIPAL       CORDOBA   \n",
-       "472289             TRONCAL D   NO       COLECTIVO    MUNICIPAL       CORDOBA   \n",
-       "472290  URBANA DE TRANSPORTE   NO       COLECTIVO    MUNICIPAL  BUENOS AIRES   \n",
-       "\n",
-       "                 MUNICIPIO  CANTIDAD DATO_PRELIMINAR  \n",
-       "0                 MERCEDES        61              NO  \n",
-       "1                 MERCEDES        11              NO  \n",
-       "2       GENERAL PUEYRREDON      1707              NO  \n",
-       "3                       SN       438              NO  \n",
-       "4       GENERAL PUEYRREDON      1189              NO  \n",
-       "...                    ...       ...             ...  \n",
-       "472286          RIO CUARTO        28              NO  \n",
-       "472287          RIO CUARTO        38              NO  \n",
-       "472288          RIO CUARTO        54              NO  \n",
-       "472289          RIO CUARTO        52              NO  \n",
-       "472290  URBANO DE LA COSTA      1408              NO  \n",
-       "\n",
-       "[472291 rows x 10 columns]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 472291 entries, 0 to 472290\n",
+      "Data columns (total 10 columns):\n",
+      " #   Column           Non-Null Count   Dtype \n",
+      "---  ------           --------------   ----- \n",
+      " 0   DIA_TRANSPORTE   472291 non-null  object\n",
+      " 1   NOMBRE_EMPRESA   472291 non-null  object\n",
+      " 2   LINEA            472291 non-null  object\n",
+      " 3   AMBA             472291 non-null  object\n",
+      " 4   TIPO_TRANSPORTE  472291 non-null  object\n",
+      " 5   JURISDICCION     469742 non-null  object\n",
+      " 6   PROVINCIA        469720 non-null  object\n",
+      " 7   MUNICIPIO        469720 non-null  object\n",
+      " 8   CANTIDAD         472291 non-null  int64 \n",
+      " 9   DATO_PRELIMINAR  472291 non-null  object\n",
+      "dtypes: int64(1), object(9)\n",
+      "memory usage: 36.0+ MB\n"
+     ]
     }
    ],
    "source": [
-    "dataset_sube"
+    "dataset_sube.info()"
    ]
   },
   {
