--- a/main.ipynb
+++ b/main.ipynb
@@ -12,6 +12,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Procesamiento de datos"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -22,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -55,9 +62,77 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset_sube['DIA_TRANSPORTE'] = pd.to_datetime(dataset_sube['DIA_TRANSPORTE'], format='%Y-%m-%d')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 472291 entries, 0 to 472290\n",
+      "Data columns (total 10 columns):\n",
+      " #   Column           Non-Null Count   Dtype         \n",
+      "---  ------           --------------   -----         \n",
+      " 0   DIA_TRANSPORTE   472291 non-null  datetime64[ns]\n",
+      " 1   NOMBRE_EMPRESA   472291 non-null  object        \n",
+      " 2   LINEA            472291 non-null  object        \n",
+      " 3   AMBA             472291 non-null  object        \n",
+      " 4   TIPO_TRANSPORTE  472291 non-null  object        \n",
+      " 5   JURISDICCION     469742 non-null  object        \n",
+      " 6   PROVINCIA        469720 non-null  object        \n",
+      " 7   MUNICIPIO        469720 non-null  object        \n",
+      " 8   CANTIDAD         472291 non-null  int64         \n",
+      " 9   DATO_PRELIMINAR  472291 non-null  object        \n",
+      "dtypes: datetime64[ns](1), int64(1), object(8)\n",
+      "memory usage: 36.0+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "dataset_sube.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Analisis exploratorio"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Modelado"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
