--- a/main.ipynb
+++ b/main.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "# import datetime as dt"
    ]
   },
   {
@@ -20,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,41 +29,22 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 8,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 472291 entries, 0 to 472290\n",
-      "Data columns (total 10 columns):\n",
-      " #   Column           Non-Null Count   Dtype \n",
-      "---  ------           --------------   ----- \n",
-      " 0   DIA_TRANSPORTE   472291 non-null  object\n",
-      " 1   NOMBRE_EMPRESA   472291 non-null  object\n",
-      " 2   LINEA            472291 non-null  object\n",
-      " 3   AMBA             472291 non-null  object\n",
-      " 4   TIPO_TRANSPORTE  472291 non-null  object\n",
-      " 5   JURISDICCION     469742 non-null  object\n",
-      " 6   PROVINCIA        469720 non-null  object\n",
-      " 7   MUNICIPIO        469720 non-null  object\n",
-      " 8   CANTIDAD         472291 non-null  int64 \n",
-      " 9   DATO_PRELIMINAR  472291 non-null  object\n",
-      "dtypes: int64(1), object(9)\n",
-      "memory usage: 36.0+ MB\n"
-     ]
-    }
-   ],
    "source": [
-    "dataset_sube.info()"
+    "### Ejercicio 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### a)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,43 +52,109 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 13,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 472291 entries, 0 to 472290\n",
-      "Data columns (total 10 columns):\n",
-      " #   Column           Non-Null Count   Dtype         \n",
-      "---  ------           --------------   -----         \n",
-      " 0   DIA_TRANSPORTE   472291 non-null  datetime64[ns]\n",
-      " 1   NOMBRE_EMPRESA   472291 non-null  object        \n",
-      " 2   LINEA            472291 non-null  object        \n",
-      " 3   AMBA             472291 non-null  object        \n",
-      " 4   TIPO_TRANSPORTE  472291 non-null  object        \n",
-      " 5   JURISDICCION     469742 non-null  object        \n",
-      " 6   PROVINCIA        469720 non-null  object        \n",
-      " 7   MUNICIPIO        469720 non-null  object        \n",
-      " 8   CANTIDAD         472291 non-null  int64         \n",
-      " 9   DATO_PRELIMINAR  472291 non-null  object        \n",
-      "dtypes: datetime64[ns](1), int64(1), object(8)\n",
-      "memory usage: 36.0+ MB\n"
-     ]
-    }
-   ],
    "source": [
-    "dataset_sube.info()"
+    "#### b)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "##### i."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def obtener_nombre_dia(fecha_dia):\n",
+    "    dias = ['Lunes', 'Martes', 'Miércoles', 'Jueves', 'Viernes', 'Sábado', 'Domingo']\n",
+    "    return dias[fecha_dia.weekday()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset_sube['FECHA_DIA'] = dataset_sube['DIA_TRANSPORTE'].apply(obtener_nombre_dia)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### ii."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset_sube['FECHA_ORDINAL'] = dataset_sube['DIA_TRANSPORTE'].dt.day_of_year"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### iii."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ejercicio 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ejercicio 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Analisis exploratorio"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ejercicio 4"
    ]
   },
   {
@@ -121,6 +169,13 @@
    "metadata": {},
    "source": [
     "## Modelado"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ejercicio 5"
    ]
   },
   {
