--- a/main.ipynb
+++ b/main.ipynb
@@ -9,10 +9,10 @@
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "import seaborn.objects as so\n",
-    "import datetime as dt"
+    "import datetime as dt",
+    "import matplotlib.pyplot as plt"
    ]
   },
-    "import matplotlib.pyplot as plt"
    ]
   },
   {
