--- a/main.ipynb
+++ b/main.ipynb
@@ -9,7 +9,7 @@
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "import seaborn.objects as so\n",
-    "import datetime as dt",
+    "import datetime as dt\n",
     "import matplotlib.pyplot as plt"
    ]
   },
