--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,12 +31,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "dataset_sube20 = pd.read_csv(ruta_datasets+'dat-ab-usos-2020.csv')\n",
+    "dataset_sube21 = pd.read_csv(ruta_datasets+'dat-ab-usos-2021.csv')\n",
+    "dataset_sube22 = pd.read_csv(ruta_datasets+'dat-ab-usos-2022.csv')\n",
     "dataset_sube = pd.read_csv(ruta_datasets+'sube-2023.csv')\n",
     "dataset_sube_regresion = pd.read_csv(ruta_datasets+'sube-2023-regresion.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_concatenado = pd.concat([dataset_sube20,dataset_sube21,dataset_sube22,dataset_sube])"
    ]
   },
   {
@@ -602,26 +614,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#creo un nuevo DataFrame con todos los años\n",
-    "dataset_sube20 = pd.read_csv('data/dat-ab-usos-2020.csv')\n",
-    "dataset_sube21 = pd.read_csv('data/dat-ab-usos-2021.csv')\n",
-    "dataset_sube22 = pd.read_csv('data/dat-ab-usos-2022.csv')\n",
-    "df_concatenado = pd.concat([dataset_sube20,dataset_sube21,dataset_sube22,dataset_sube])"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Creo una columna que me separe los años\n",
     "df_concatenado['DIA_TRANSPORTE'] = pd.to_datetime(df_concatenado['DIA_TRANSPORTE'], format='%Y-%m-%d')\n",
-    "df_concatenado['AÑO'] = df_concatenado['DIA_TRANSPORTE'].dt.year\n"
+    "df_concatenado['AÑO'] = df_concatenado['DIA_TRANSPORTE'].dt.year"
    ]
   },
   {
@@ -647,7 +645,7 @@
     }
    ],
    "source": [
-    "so.Plot(data=df_concatenado, x=\"AÑO\", y=\"CANTIDAD\", color = \"TIPO_TRANSPORTE\").add(so.Bar(), so.Agg(\"sum\"), so.Dodge()).scale(x=so.Nominal()).label(title=\"Cantidad de pasajeros por tipo de transporte por año\", x=\"Año\", y=\"Cantidad de pasajeros\", color= \"transporte\" )\n"
+    "so.Plot(data=df_concatenado, x=\"AÑO\", y=\"CANTIDAD\", color = \"TIPO_TRANSPORTE\").add(so.Bar(), so.Agg(\"sum\"), so.Dodge()).scale(x=so.Nominal()).label(title=\"Cantidad de pasajeros por tipo de transporte por año\", x=\"Año\", y=\"Cantidad de pasajeros\", color= \"transporte\" )"
    ]
   },
   {
@@ -700,7 +698,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
