--- a/main.ipynb
+++ b/main.ipynb
@@ -545,6 +545,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "hola"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "##### Gráfico 4"
    ]
   },
