--- a/main.ipynb
+++ b/main.ipynb
@@ -584,6 +584,13 @@
     "plt.show()"
    ]
   },
+{
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "En este gráfico podemos observar la cantidad total de pasajeros en miles (K), por tipo de transporte y día de la semana, usando los datos de AMBA. Podemos resaltar que en los días de semana, es decir, los días laborales, hay mayor cantidad de pasajeros en todos los transportes públicos en comparación a los fines de semana. El día de mayor uso de transporte en general es el Miércoles pero esto lo vamos a analizar en un gráfico siguiente. Tambien tenemos que destacar la diferencia de cantdad de pasajeros entre los tipos de transporte, por ejemplo se nota fuertemente que la mayor cantidad de personas utilizan los colectivos en vez de subte o tren, esto se debe a que los colectivos tienen más lineas que los otros dos medios y que llegan a más lugares, como sabemos los subtes solo existen en CABA y aunque los trenes si los podemos encontrar en varias provincias, no en todas y esto afecta a la cantidad de usos de estos medios."
+   ]
+  },
   {
    "cell_type": "markdown",
    "metadata": {},
