agrego nombre integrantes

--- a/main.ipynb
+++ b/main.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# TP1 - Fatima Jordan, Malena Do Brito, Alejo Goncalves - Turno Noche"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -3497,19 +3504,27 @@
     "    - Error Absoluto Medio: 4350.357606480816\n",
     "    - R2: 0.6564742168407034\n",
     "\n",
+    "\n",
     "- Regresión multivariada:\n",
     "    - Error Cuadrático Medio: 2284.738578930261\n",
     "    - Error Absoluto Medio: 1708.9480010021348\n",
     "    - R2: 0.9455414592956677\n",
     "\n",
+    "\n",
     "- Regresión Ridge:\n",
     "    - Error Cuadrático Medio: 1989.9150508557807\n",
     "    - Error Absoluto Medio: 1190.9900736718037\n",
     "    - R2: 0.9586893485895117\n",
+    "    \n",
     "\n",
     "\n",
     "Concluimos que la regresión Ridge es la que mejor ajusta a la línea BSAS_LINEA_009 para realizar predicciones."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
